--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "image-to-pdf": "^2.0.0",
     "pdf-poppler": "^0.2.1"
